--- a/userGuide.html
+++ b/userGuide.html
@@ -266,7 +266,7 @@
                         <li><a href="#initial-setup" style="color: #667eea; text-decoration: none;"><strong>⚙️ 初期設定手順</strong></a> - 4ステップの初回セットアップ（必須）</li>
                         <li><a href="#daily-use" style="color: #667eea; text-decoration: none;"><strong>📅 日常業務</strong></a> - 週報PDF保存、フォルダ管理、日付移動</li>
                         <li><a href="#reporting" style="color: #667eea; text-decoration: none;"><strong>📊 集計・レポート</strong></a> - 学年別授業時数の集計</li>
-                        <li><a href="#system-management" style="color: #667eea; text-decoration: none;"><strong>🔧 手動管理機能</strong></a> - カレンダー同期、年度更新ファイル作成</li>
+                        <li><a href="#system-management" style="color: #667eea; text-decoration: none;"><strong>🔧 手動管理機能</strong></a> - 年度更新設定、カレンダー同期、年度更新ファイル作成</li>
                         <li><a href="#automation" style="color: #667eea; text-decoration: none;"><strong>⚙️ 自動実行設定</strong></a> - 定期的な自動処理の設定・管理</li>
                         <li><a href="#troubleshooting" style="color: #667eea; text-decoration: none;"><strong>🚨 トラブルシューティング</strong></a> - よくある問題と解決方法</li>
                         <li><a href="#faq" style="color: #667eea; text-decoration: none;"><strong>❓ よくある質問（FAQ）</strong></a> - 日直機能、自動実行など</li>
@@ -292,7 +292,7 @@
                             <ul>
                                 <li><strong>🎯 ポータルマスター</strong> → <strong>🏗️ 初回セットアップ</strong> → <strong>ステップ1: 年間行事計画をインポート</strong></li>
                                 <li>ダイアログでGoogleスプレッドシートのURLを入力</li>
-                                <li>「年度更新作業」シートのC11セルに基準日を事前設定</li>
+                                <li>「🔧 システム管理」→「🗂️ 年度更新設定」で基準日（日曜日）を事前設定</li>
                                 <li>日付の自動補完と整合性チェック機能付き</li>
                             </ul>
                         </div>
@@ -366,7 +366,7 @@
                     <h4>⚠️ 初期設定の注意点</h4>
                     <ul>
                         <li>手順は必ず1→2→3→4→5の順序で実行してください</li>
-                        <li>「年度更新作業」シートに必要な設定値が入力されていることを確認してください</li>
+                        <li>「🔧 システム管理」→「🗂️ 年度更新設定」に必要な設定値が入力されていることを確認してください</li>
                     </ul>
                 </div>
             </section>
@@ -476,7 +476,7 @@
                         <li>行事カテゴリー（儀式、文化等）は短縮形で入力</li>
                         <li>月別での詳細な内訳を確認可能</li>
                         <li>標準授業時数と実施時数の比較が容易</li>
-                        <li><strong>🧩 モジュール学習について:</strong> 計画は <code>module_cycle_plan</code>（2か月クール×45分コマ）で管理し、日次配分は <code>module_daily_plan</code> に自動生成されます。実施調整は <code>module_exceptions</code> の <code>delta_sessions</code>（15分単位）で行います。</li>
+                        <li><strong>🧩 モジュール学習について:</strong> モジュール学習管理ダイアログで計画と実施差分を入力します。日次配分は保存せず、再集計時に再計算して累計へ反映します。実施差分は15分単位で入力します。</li>
                         <li><strong>⚠️ R列について:</strong> 年間行事予定表のR列は日直運用のための列です。モジュール学習集計では使用しません。</li>
                     </ul>
                 </div>
@@ -492,13 +492,25 @@
                 </div>
 
                 <div class="menu-item">
+                    <h4>🗂️ 年度更新設定</h4>
+                    <p><span class="function-name">showAnnualUpdateSettingsDialog</span></p>
+                    <p>年度更新に必要な設定値（C5/C7/C11/C14/C15/C16）をダイアログで一元管理します。</p>
+                    <ul>
+                        <li><strong>メニュー:</strong> 🔧 システム管理 → 🗂️ 年度更新設定</li>
+                        <li>複製ファイル名、複製先フォルダID、基準日（日曜日）を入力</li>
+                        <li>週報フォルダID・カレンダーIDを編集または空欄化して自動再作成に対応</li>
+                        <li>シートを直接編集しなくても設定変更が可能</li>
+                    </ul>
+                </div>
+
+                <div class="menu-item">
                     <h4>🧩 モジュール学習管理</h4>
                     <p><span class="function-name">showModulePlanningDialog</span></p>
-                    <p><code>module_cycle_plan</code> の2か月クール計画を編集すると、学校週ベースで日次計画を自動配分し、累計時数シートへ統合します。</p>
+                    <p>モジュール学習管理ダイアログで2か月クール計画と実施差分を管理し、学校週ベースの日次配分は再集計時に再計算して累計時数シートへ統合します。</p>
                     <ul>
                         <li><strong>メニュー:</strong> 🔧 システム管理 → 🧩 モジュール学習管理</li>
-                        <li>計画編集は <code>module_cycle_plan</code>、日単位確認は <code>module_daily_plan</code> を使用</li>
-                        <li>実施調整は <code>module_exceptions</code> の <code>delta_sessions</code> 入力のみ</li>
+                        <li>計画編集・実施差分入力はダイアログ画面で完結</li>
+                        <li>実施調整は15分単位の差分値で入力</li>
                         <li>結果は累計時数シートM～O列と <code>MOD実施累計(表示)</code> 列に統合反映</li>
                     </ul>
                 </div>
@@ -522,7 +534,7 @@
                     <p>現在のスプレッドシートをコピーし、新年度用にデータをクリアしたファイルを作成します。</p>
                     <ul>
                         <li><strong>メニュー:</strong> 🔧 システム管理 → 📋 年度更新ファイル作成</li>
-                        <li>年度更新作業シートC5（ファイル名）とC7（フォルダID）の設定に基づいて実行</li>
+                        <li>「🗂️ 年度更新設定」で保存したC5（ファイル名）とC7（フォルダID）に基づいて実行</li>
                         <li>新年度用にマスターシートなどのデータを自動クリア</li>
                         <li>設定値は保持され、行事予定のみリセット</li>
                         <li>作成されたファイルは指定フォルダに保存</li>
@@ -575,14 +587,14 @@
                         <li>トグルスイッチで各処理の有効/無効を切り替え</li>
                         <li>週次処理は曜日と時刻を選択</li>
                         <li>毎日処理は時刻を選択</li>
-                        <li>設定は「年度更新作業」シートC18～C28に保存</li>
+                        <li>設定はダイアログで管理され、内部的に「年度更新作業」シートC18～C28に保存</li>
                     </ul>
                 </div>
 
                 <div class="warning">
                     <h4>⚠️ カレンダー管理の注意</h4>
                     <ul>
-                        <li>カレンダーIDは「年度更新作業」シートC15・C16セルに保存されます</li>
+                        <li>カレンダーIDは「🗂️ 年度更新設定」で管理し、内部的に「年度更新作業」シートC15・C16セルに保存されます</li>
                         <li>初回実行時に新しいカレンダーが自動作成されます</li>
                         <li>削除したカレンダーを復旧する場合はIDをクリアして再実行してください</li>
                     </ul>
@@ -619,7 +631,7 @@
                     <ul>
                         <li>Googleドライブの空き容量を確認</li>
                         <li>スプレッドシートが保存されているフォルダの権限を確認</li>
-                        <li>「年度更新作業」シートC14セルの値をクリアして再実行</li>
+                        <li>「🔧 システム管理」→「🗂️ 年度更新設定」で週報フォルダID（C14）をクリアして再実行</li>
                     </ul>
                 </div>
 
@@ -629,7 +641,7 @@
                     <p><strong>解決方法：</strong></p>
                     <ul>
                         <li>スクリプトエディタで権限を再承認</li>
-                        <li>「年度更新作業」シートC15・C16セルをクリアして再実行</li>
+                        <li>「🔧 システム管理」→「🗂️ 年度更新設定」でC15・C16をクリアして再実行</li>
                         <li>Googleカレンダーの「マイカレンダー」に新しいカレンダーが作成されることを確認</li>
                     </ul>
                 </div>
@@ -861,10 +873,6 @@
     </style>
 </body>
 </html>
-
-
-
-
 
 
 
