Hide settings sheet on open and remove sheet references in dialog

--- a/annualUpdateSettingsDialog.html
+++ b/annualUpdateSettingsDialog.html
@@ -110,7 +110,7 @@
     <h2>🗂️ 年度更新設定</h2>
 
     <div class="info-box">
-      ℹ️ 年度更新作業シート（C5/C7/C11/C14/C15/C16）の設定値をこの画面で管理できます。
+      ℹ️ 年度更新に必要な設定値をこの画面でまとめて管理できます。
     </div>
 
     <div class="warning-box">
@@ -120,16 +120,16 @@
     <div class="section">
       <h3>📋 年度更新ファイル作成</h3>
       <div class="form-group">
-        <label for="copyFileName">複製ファイル名（C5）</label>
+        <label for="copyFileName">複製ファイル名</label>
         <input type="text" id="copyFileName" placeholder="例: 令和8年度年間行事予定表">
       </div>
       <div class="form-group">
-        <label for="copyDestinationFolderId">複製先フォルダID（C7）</label>
+        <label for="copyDestinationFolderId">複製先フォルダID</label>
         <input type="text" id="copyDestinationFolderId" placeholder="空欄可">
         <div class="hint">空欄の場合は、このスプレッドシートと同じフォルダに保存します。</div>
       </div>
       <div class="form-group">
-        <label for="baseSunday">基準日（日曜日）（C11）</label>
+        <label for="baseSunday">基準日（日曜日）</label>
         <input type="date" id="baseSunday">
       </div>
     </div>
@@ -137,18 +137,18 @@
     <div class="section">
       <h3>🔗 連携先ID</h3>
       <div class="form-group">
-        <label for="weeklyReportFolderId">週報フォルダID（C14）</label>
+        <label for="weeklyReportFolderId">週報フォルダID</label>
         <input type="text" id="weeklyReportFolderId" placeholder="空欄可">
         <div class="hint">空欄の場合は、週報保存時に自動作成・保存されます。</div>
       </div>
       <div class="form-group">
-        <label for="eventCalendarId">行事予定カレンダーID（C15）</label>
+        <label for="eventCalendarId">行事予定カレンダーID</label>
         <input type="text" id="eventCalendarId" placeholder="空欄可">
       </div>
       <div class="form-group">
-        <label for="externalCalendarId">対外行事カレンダーID（C16）</label>
+        <label for="externalCalendarId">対外行事カレンダーID</label>
         <input type="text" id="externalCalendarId" placeholder="空欄可">
-        <div class="hint">C15/C16を空欄にすると、次回同期時に自動で再作成されます。</div>
+        <div class="hint">カレンダーIDを空欄にすると、次回同期時に自動で再作成されます。</div>
       </div>
     </div>
 
