test: optimize suite with non-destructive operational checks

--- a/userGuide.html
+++ b/userGuide.html
@@ -619,14 +619,14 @@
                         <li>トグルスイッチで各処理の有効/無効を切り替え</li>
                         <li>週次処理は曜日と時刻を選択</li>
                         <li>毎日処理は時刻を選択</li>
-                        <li>設定はダイアログで管理され、内部的に「年度更新作業」シートC18～C28に保存</li>
+                        <li>設定はダイアログで管理され、内部的に「app_config」シートC18～C28に保存</li>
                     </ul>
                 </div>
 
                 <div class="warning">
                     <h4>⚠️ カレンダー管理の注意</h4>
                     <ul>
-                        <li>カレンダーIDは「🗂️ 年度更新設定」で管理し、内部的に「年度更新作業」シートC15・C16セルに保存されます</li>
+                        <li>カレンダーIDは「🗂️ 年度更新設定」で管理し、内部的に「app_config」シートC15・C16セルに保存されます</li>
                         <li>初回実行時に新しいカレンダーが自動作成されます</li>
                         <li>削除したカレンダーを復旧する場合はIDをクリアして再実行してください</li>
                     </ul>
@@ -646,7 +646,7 @@
                         <li>以下のシートが存在することを確認：
                             <ul>
                                 <li>年間行事予定表</li>
-                                <li>年度更新作業</li>
+                                <li>app_config</li>
                                 <li>マスター</li>
                                 <li>累計時数</li>
                                 <li>時数様式</li>
@@ -746,7 +746,7 @@
                         <th>v2.0での変更点</th>
                     </tr>
                     <tr>
-                        <td rowspan="6">年度更新作業</td>
+                        <td rowspan="6">app_config</td>
                         <td>C5</td>
                         <td>コピー先ファイル名</td>
                         <td>変更なし</td>
@@ -841,7 +841,7 @@
                     <p><strong>A:</strong> 以下を確認してください：</p>
                     <ul>
                         <li>「⚙️ 設定」→「自動トリガー設定」を実施済みか確認</li>
-                        <li>「年度更新作業」シートC24セルが空白でないか確認（空白の場合は無効）</li>
+                        <li>「app_config」シートC24セルが空白でないか確認（空白の場合は無効）</li>
                         <li>設定ダイアログで累計時数計算がONになっているか確認</li>
                         <li>スクリプトエディタの「トリガー」メニューで実行ログを確認</li>
                     </ul>
@@ -852,7 +852,7 @@
                     <p><strong>A:</strong> <a href="#troubleshooting" style="color: #667eea;">トラブルシューティングセクション</a>を参照してください。それでも解決しない場合：</p>
                     <ul>
                         <li>スクリプトエディタのログを確認（実行ログまたはStackdriverログ）</li>
-                        <li>「年度更新作業」シートの設定値を確認</li>
+                        <li>「app_config」シートの設定値を確認</li>
                         <li>製作者（中龍馬）までメールまたは電話でお問い合わせください</li>
                     </ul>
                 </div>
