--- a/userGuide.html
+++ b/userGuide.html
@@ -370,6 +370,15 @@
                         <li>機能ごとのON/OFF、曜日、時刻をダイアログで変更可能</li>
                     </ul>
                 </div>
+
+                <div class="warning">
+                    <h4>⚠️ app_config シートについて</h4>
+                    <ul>
+                        <li><strong>app_config</strong> は内部管理用のため通常は非表示です</li>
+                        <li>設定変更は原則「⚙️ 設定」メニューのダイアログから行ってください</li>
+                        <li>直接確認が必要な場合は「表示」→「非表示のシート」から一時表示できます</li>
+                    </ul>
+                </div>
             </section>
 
             <section id="daily-use" class="section">
@@ -565,11 +574,12 @@
                 <div class="menu-item">
                     <h4>📋 年度更新ファイル作成</h4>
                     <p><span class="function-name">copyAndClear</span></p>
-                    <p>現在のスプレッドシートをコピーし、新年度用にデータをクリアしたファイルを作成します。</p>
+                    <p>現在のスプレッドシートをコピーし、コピー先ファイルを新年度用に初期化します。</p>
                     <ul>
                         <li><strong>メニュー:</strong> 🔁 連携と年度更新 → 年度更新ファイル作成</li>
                         <li>「⚙️ 設定」→「年度更新設定」で保存したC5（ファイル名）とC7（フォルダID）に基づいて実行</li>
-                        <li>新年度用にマスターシートなどのデータを自動クリア</li>
+                        <li>コピー先ファイルの「年間行事予定表」D3:S と U3:AB のデータを自動クリア</li>
+                        <li>元ファイルは変更されません</li>
                     </ul>
                 </div>
             </section>
@@ -652,6 +662,7 @@
                                 <li>時数様式</li>
                             </ul>
                         </li>
+                        <li>app_config は通常非表示のため、「表示」→「非表示のシート」も確認</li>
                         <li>シート名に余分な空白やタブ文字がないことを確認</li>
                     </ul>
                 </div>
