fix: keep portal URL stable by clearing active file after backup

--- a/userGuide.html
+++ b/userGuide.html
@@ -574,12 +574,12 @@
                 <div class="menu-item">
                     <h4>📋 年度更新ファイル作成</h4>
                     <p><span class="function-name">copyAndClear</span></p>
-                    <p>現在のスプレッドシートをコピーし、コピー先ファイルを新年度用に初期化します。</p>
+                    <p>現在のスプレッドシートをバックアップとしてコピーし、このファイル（現在のURL）を新年度用に初期化します。</p>
                     <ul>
                         <li><strong>メニュー:</strong> 🔁 連携と年度更新 → 年度更新ファイル作成</li>
                         <li>「⚙️ 設定」→「年度更新設定」で保存したC5（ファイル名）とC7（フォルダID）に基づいて実行</li>
-                        <li>コピー先ファイルの「年間行事予定表」D3:S と U3:AB のデータを自動クリア</li>
-                        <li>元ファイルは変更されません</li>
+                        <li>バックアップ作成後、現在のファイルの「年間行事予定表」D3:S と U3:AB のデータを自動クリア</li>
+                        <li>ポータルマスターのURLは変わりません（同じファイルを継続利用）</li>
                     </ul>
                 </div>
             </section>
@@ -759,7 +759,7 @@
                     <tr>
                         <td rowspan="6">app_config</td>
                         <td>C5</td>
-                        <td>コピー先ファイル名</td>
+                        <td>バックアップファイル名</td>
                         <td>変更なし</td>
                     </tr>
                     <tr>
