feat: align module UI terminology and range-aware monthly display

--- a/userGuide.html
+++ b/userGuide.html
@@ -531,10 +531,10 @@
                 <div class="menu-item">
                     <h4>🧩 モジュール学習管理</h4>
                     <p><span class="function-name">showModulePlanningDialog</span></p>
-                    <p>モジュール学習の計画入力・実施差分入力を行い、保存時に自動再集計して累計時数へ反映します。</p>
+                    <p>モジュール学習の年間計画時数入力・実績調整入力を行い、保存時に自動再計算して累計時数へ反映します。</p>
                     <ul>
                         <li><strong>メニュー:</strong> 📊 集計 → モジュール学習管理</li>
-                        <li>計画保存と差分追加のどちらでも再集計を実行</li>
+                        <li>年間計画時数保存と実績調整追加のどちらでも再計算を実行</li>
                     </ul>
                 </div>
 
@@ -545,7 +545,7 @@
                         <li>行事カテゴリー（儀式、文化等）は短縮形で入力</li>
                         <li>月別での詳細な内訳を確認可能</li>
                         <li>標準授業時数と実施時数の比較が容易</li>
-                        <li><strong>🧩 モジュール学習について:</strong> モジュール学習管理ダイアログで計画と実施差分を入力します。日次配分は保存せず、再集計時に再計算して累計へ反映します。実施差分は15分単位で入力します。</li>
+                        <li><strong>🧩 モジュール学習について:</strong> モジュール学習管理ダイアログで年間計画時数と実績調整を入力します。日次配分は保存せず、再計算時に累計へ反映します。実績調整は15分単位で入力します。</li>
                         <li><strong>⚠️ R列について:</strong> 年間行事予定表のR列は日直運用のための列です。モジュール学習集計では使用しません。</li>
                     </ul>
                 </div>
